2010-11-20  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-ignored-files)
	(authors-valid-file-names, authors-renamed-files-alist): Add entries.

2010-11-20  Tassilo Horn  <tassilo@member.fsf.org>

	* mail/emacsbug.el (report-emacs-bug-query-existing-bugs)
	(report-emacs-bug-parse-query-results)
	(report-emacs-bug-create-existing-bugs-buffer): Pass through
	keywords used for querying the bug database to show them in the
	existing bugs buffer.

2010-11-20  Jan Djärv  <jan.h.d@swipnet.se>

	* tool-bar.el (tool-bar-setup): Add some :vert-only keywords.

	* info.el (info-tool-bar-map): Add some :vert-only keywords.

2010-11-20  Eli Zaretskii  <eliz@gnu.org>

	* international/characters.el (glyphless-char-display-control):
	Make it a defcustom, with update-glyphless-char-display as its
	:set attribute.
	(top level): Don't call update-glyphless-char-display.

2010-11-20  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.2.0.

	* net/tramp.el (tramp-handle-insert-file-contents): Don't use
	`file-remote-p' (due to compatibility).

	* net/tramp-sh.el (tramp-do-copy-or-rename-file-directly)
	(tramp-do-copy-or-rename-file-out-of-band): Use `ignore-errors'.

	* net/trampver.el: Update release number.

2010-11-20  Eli Zaretskii  <eliz@gnu.org>

	* faces.el (glyphless-char): Define value for `pc'.

2010-11-20  Tassilo Horn  <tassilo@member.fsf.org>

	Implemented a bug querying mechanism.
	* mail/emacsbug.el (report-emacs-bug-tracker-url): New variable.
	(report-emacs-bug-create-existing-bugs-buffer)
	(report-emacs-bug-parse-query-results)
	(report-emacs-bug-query-existing-bugs): New functions.

2010-11-19  Tassilo Horn  <tassilo@member.fsf.org>

	* textmodes/reftex-ref.el (reftex-goto-label): If point is inside
	a \ref{} or \pageref{} macro, then use its value as initial input.

2010-11-19  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-units.el (math-build-units-table-buffer):
	calc/README: Mention that the TeX specific units won't use the